[tool.poetry]
name = ">>> YOUR PROJECT NAME"
version = "0.1.0"
description = ">>> YOUR PROJECT DESCRIPTION"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = ">>> LICENSE"
packages = [
    { include = ">>> YOUR PACKAGE NAME", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
tryceratops = "^2.3.2"
mypy = "^1.4.1"
isort = "^5.12.0"
pre-commit = "^3.3.3"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest"]

[mypy]
warn_return_any = false
warn_unused_configs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
